--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbw2eAIVGjVbsmwioAcrff",
+      "authorship_tag": "ABX9TyPAW3DawcP+cho0tFoVcQyQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,11 +321,7 @@
       "source": [
         "## **TextBlob**\n",
         "\n",
-        "**Sentiment Analysis**: Sentiment analysis, also known as opinion mining, is a natural language processing (NLP) technique used to determine the emotional tone or sentiment expressed in a piece of text, such as a sentence, paragraph, or document.\n",
-        "\n",
-        "**Polarity Score**: The polarity score measures the sentiment of the text as positive, negative, or neutral. It is represented as a numerical value ranging from -1 (very negative) to 1 (very positive), with 0 indicating a neutral sentiment.\n",
-        "\n",
-        "**Subjectivity Score**: The subjectivity score measures the subjectivity or objectivity of the text. It is represented as a numerical value ranging from 0 to 1, where 0 is highly objective (factual) and 1 is highly subjective (opinionated)."
+        "**Sentiment Analysis**: Sentiment analysis, also known as opinion mining, is a natural language processing (NLP) technique used to determine the emotional tone or sentiment expressed in a piece of text, such as a sentence, paragraph, or document."
       ],
       "metadata": {
         "id": "OTNgR1OB1SiJ"
@@ -378,8 +374,28 @@
     {
       "cell_type": "code",
       "source": [
-        "from textblob import TextBlob\n",
+        "from textblob import TextBlob"
+      ],
+      "metadata": {
+        "id": "uvgkfteM6d_b"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Polarity Score**: The polarity score measures the sentiment of the text as positive, negative, or neutral. It is represented as a numerical value ranging from -1 (very negative) to 1 (very positive), with 0 indicating a neutral sentiment.\n",
         "\n",
+        "**Subjectivity Score**: The subjectivity score measures the subjectivity or objectivity of the text. It is represented as a numerical value ranging from 0 to 1, where 0 is highly objective (factual) and 1 is highly subjective (opinionated)."
+      ],
+      "metadata": {
+        "id": "1sORQuu18tU1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "text = \"TextBlob is a simple and easy-to-use library for processing textual data.\"\n",
         "\n",
         "blob = TextBlob(text)\n",
@@ -399,9 +415,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8XQZKJ1U1uoA",
-        "outputId": "4ae393ab-e26e-4df3-f657-1e06642e2727"
+        "outputId": "68a959a5-354c-4830-b3c7-c6006fd7d15f"
       },
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,6 +436,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Machine Translation**: Textblob uses Google Translator's API to provide a very simple interface for translating text."
+      ],
+      "metadata": {
+        "id": "nVbQ82O56TSN"
+      }
     }
   ]
 }
