--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15,14 +15,56 @@
       "deephaven.dataDir=/home/jasleen/.local/share/deephaven\n",
       "# io.deephaven.internal.log.LoggerFactoryServiceLoaderImpl: searching for 'io.deephaven.internal.log.LoggerFactory'...\n",
       "# io.deephaven.internal.log.LoggerFactoryServiceLoaderImpl: found 'io.deephaven.internal.log.LoggerFactorySlf4j'\n",
-      "Server started on port 3000\n"
+      "Server started on port 10000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-11 17:51:33.068044: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-09-11 17:51:33.149146: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-09-11 17:51:33.150689: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-09-11 17:51:34.637537: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x7f8634608e08, num_rows = 13871, columns = {'Toke...}))\n",
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 28, 128)           256000    \n",
+      "                                                                 \n",
+      " spatial_dropout1d (Spatial  (None, 28, 128)           0         \n",
+      " Dropout1D)                                                      \n",
+      "                                                                 \n",
+      " lstm (LSTM)                 (None, 196)               254800    \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 2)                 394       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 511194 (1.95 MB)\n",
+      "Trainable params: 511194 (1.95 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "No of rows in train table: 9293\n",
+      "No of rows in test table: 4578\n"
      ]
     }
    ],
    "source": [
     "from deephaven_server import Server\n",
-    "s = Server(port=3000, jvm_args=[\"-Xmx4g\"])\n",
-    "s.start()"
+    "import os\n",
+    "\n",
+    "my_dh_key = \"Ja080104\"\n",
+    "\n",
+    "s = Server(jvm_args=[f\"-Dauthentication.psk={my_dh_key}\"]).start()"
    ]
   },
   {
@@ -33,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x5a724a8, num_rows = 13871, columns = {'text': ja...}))"
+       "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x5327188, num_rows = 13871, columns = {'text': ja...}))"
       ]
      },
      "execution_count": 8,
@@ -44,10 +86,11 @@
    "source": [
     "from deephaven import read_csv\n",
     "import pandas as pd\n",
+    "import deephaven as dh\n",
     "\n",
     "sentiment = read_csv(\"https://media.githubusercontent.com/media/deephaven/examples/main/Sentiment/csv/sentiment.csv\")\n",
     "sentiment = sentiment.view([\"text\", \"sentiment\"]).where(\"sentiment != 'neutral'\")\n",
-    "sentiment\n"
+    "sentiment"
    ]
   },
   {
