chal gyaaaaaa bcccc

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -265,7 +265,9 @@
       "225/225 - 24s - loss: 0.3007 - accuracy: 0.8724 - 24s/epoch - 106ms/step\n",
       "Epoch 3/7\n",
       "225/225 - 26s - loss: 0.2493 - accuracy: 0.8966 - 26s/epoch - 115ms/step\n",
-      "Epoch 4/7\n"
+      "Epoch 4/7\n",
+      "225/225 - 28s - loss: 0.2133 - accuracy: 0.9089 - 28s/epoch - 126ms/step\n",
+      "Epoch 5/7\n"
      ]
     }
    ],
