--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -267,7 +267,12 @@
       "225/225 - 26s - loss: 0.2493 - accuracy: 0.8966 - 26s/epoch - 115ms/step\n",
       "Epoch 4/7\n",
       "225/225 - 28s - loss: 0.2133 - accuracy: 0.9089 - 28s/epoch - 126ms/step\n",
-      "Epoch 5/7\n"
+      "Epoch 5/7\n",
+      "225/225 - 29s - loss: 0.1832 - accuracy: 0.9222 - 29s/epoch - 128ms/step\n",
+      "Epoch 6/7\n",
+      "225/225 - 25s - loss: 0.1610 - accuracy: 0.9338 - 25s/epoch - 109ms/step\n",
+      "Epoch 7/7\n",
+      "225/225 - 23s - loss: 0.1446 - accuracy: 0.9405 - 23s/epoch - 100ms/step\n"
      ]
     }
    ],
