--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -22,18 +22,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-12 09:51:05.301449: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-09-12 09:51:05.716861: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-09-12 09:51:05.718994: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-09-20 19:55:56.123005: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-09-20 19:55:56.565744: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-09-20 19:55:56.567829: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-09-12 09:51:07.510101: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x7fada8f2be40, num_rows = 10729, columns = {'Toke...}))\n"
+      "2023-09-20 19:55:58.479620: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -47,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x5327188, num_rows = 13871, columns = {'text': ja...}))"
+       "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x7fddf51aa8f8, num_rows = 10729, columns = {'text...}))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,17 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x9ed3fc8, num_rows = 13871, columns = {'Tokenized...}))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deephaven.table.Table(io.deephaven.engine.table.Table(objectRef=0x56560c0, num_rows = 10729, columns = {'Tokenized...}))\n"
+     ]
     }
    ],
    "source": [
